fix 2 graphical bug. (TODO minimify the css file)
Line 6880, removing padding fix the way too big buttons here : http://imgur.com/k13zQAV
Line 7159, fix the onl-line text area when editing a page : http://imgur.com/TarwdnQ

TODO: I did not minimify the .min. file

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6877,7 +6877,6 @@ thead tr:first-child th {
 .button:not(.btn_secedit),
 #media_manager .btn {
   display: inline-block;
-  padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
@@ -7157,7 +7156,7 @@ fieldset[disabled] #edbtn__save.active {
 .dokuwiki textarea.edit {
   display: block;
   width: 100%;
-  height: 34px;
+  height: 100%;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
